--- a/metabolights-referencelayer/dao/pom.xml
+++ b/metabolights-referencelayer/dao/pom.xml
@@ -29,7 +29,6 @@
     <artifactId>metabolights-referencelayer-dao</artifactId>
     <version>4.0-SNAPSHOT</version>
     <name>MetaboLights Reference layer Data Access Object</name>
-    <!--Migrated to slf4j + log4j-->
     <description>Reference layer Data Access Object</description>
 
     <parent>
@@ -53,6 +52,10 @@
                     <artifactId>log4j</artifactId>
                     <groupId>log4j</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>commons-collections</artifactId>
+                    <groupId>commons-collections</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
    		<dependency>
@@ -74,21 +77,14 @@
             <version>2.2</version>
         </dependency>
         <dependency>
-            <groupId>oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.2</version>
-            <scope>test</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1200-jdbc41</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.lambdaj</groupId>
             <artifactId>lambdaj</artifactId>
             <version>2.3</version>
         </dependency>
-        <!--dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.15</version>
-            <scope>runtime</scope>
-        </dependency-->
     </dependencies>
 </project>
