--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -44,10 +44,29 @@
     </properties>
 
     <repositories>
-        <repository>
+        <!--repository>
             <id>chebi-repo2</id>
             <name>ChEBI Internal Repository</name>
             <url>scp://prod.ebi.ac.uk/ebi/sp/pro1/chebi/maven2_repo</url>
+        </repository-->
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+        </repository>
+        <repository>
+            <id>chebi-repo-snapshot</id>
+            <name>ChEBI Repository</name>
+            <url>http://www.ebi.ac.uk/~biobabel/maven2_repo</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>codehaus-mule-repo</id>
+            <name>codehaus-mule-repo</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/groups/public/</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
@@ -56,7 +75,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
-            <version>4.1-SNAPSHOT</version>
+            <version>4.2-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
 
