--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -30,7 +30,7 @@
     <name>MetaboLights DAO</name>
     <description>MetaboLights Data Access Objects module</description>
     <!--Migrated to slf4j + log4j-->
-    <version>4.1-SNAPSHOT</version>
+    <version>4.2-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator-api</artifactId>
-            <version>1.7.7.1</version>
+            <version>1.7.7.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
@@ -68,11 +68,6 @@
             <version>2.0</version>
         </dependency>
         <dependency>
-            <groupId>org.isatools</groupId>
-            <artifactId>SpreadsheetManipulator</artifactId>
-            <version>0.4</version>
-        </dependency>
-        <dependency>
             <groupId>org.codehaus.jtstand</groupId>
             <artifactId>jtstand-sequence</artifactId>
             <version>1.2.1</version>
@@ -86,6 +81,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
         </dependency>
 
         <!-- Testing dependencies-->
@@ -134,10 +134,6 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-        </repository>
-        <repository>
-            <id>oerc</id>
-            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases/</url>
         </repository>
         <repository>
             <id>codehaus-mule-repo</id>
