--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -99,5 +99,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.0-RC3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.0-RC3</version>
+        </dependency>
     </dependencies>
 </project>
