--- a/MetaboLights-Search/service/pom.xml
+++ b/MetaboLights-Search/service/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>metabolights-domain</artifactId>
             <version>4.1-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
     </dependencies>
 
 </project>
