--- a/metabolights-species/globalnames-client/pom.xml
+++ b/metabolights-species/globalnames-client/pom.xml
@@ -31,13 +31,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>globalnames-client</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.3-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.12</version>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.13</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
