--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -104,5 +104,15 @@
             <artifactId>json-smart</artifactId>
             <version>2.0-RC3</version>
         </dependency>
+        <dependency>
+            <groupId>org.bitbucket.b_c</groupId>
+            <artifactId>jose4j</artifactId>
+            <version>0.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bitbucket.b_c</groupId>
+            <artifactId>jose4j</artifactId>
+            <version>0.4.4</version>
+        </dependency>
     </dependencies>
 </project>
