Study page changes 	Assay tab changes 	Public link changes 	Tour changes

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -54,7 +54,7 @@
             },
             {
                 "selected": false,
-                "title": "Give us feedback",
+                "title": "Contact",
                 "href": "/metabolights/contact",
                 "tooltip": "Please give us feedback"
             },
