--- a/MetaboLights-Search/pom.xml
+++ b/MetaboLights-Search/pom.xml
@@ -23,16 +23,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-search</artifactId>
+    <name>MetaboLights Search</name>
+    <version>3.1</version>
+
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
         <version>1.5</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>metabolights-search</artifactId>
-    <name>MetaboLights Search</name>
-    <version>3.1</version>
 
     <packaging>pom</packaging>
 
