MetaboLights online editor v1.5.0 delpoyment

--- a/.gitignore
+++ b/.gitignore
@@ -221,7 +221,7 @@ metabolights-webapps/src/main/webapp/WEB-INF/lib/resolver-20050927.jar
 metabolights-webapps/src/main/webapp/WEB-INF/lib/rhea-domain-1.7.0.jar
 metabolights-webapps/src/main/webapp/WEB-INF/lib/rhea-ws-client-2.0.0.jar
 metabolights-webapps/src/main/webapp/WEB-INF/lib/rhea-ws-domain-2.1.0.jar
-metabolights-webapps/src/main/webapp/WEB-INF/lib/saaj-api-1.3.jar
+metabolights-webapps/src/main/webapp/WEB-INF/lib/saaj-api-1.3.jare
 metabolights-webapps/src/main/webapp/WEB-INF/lib/saaj-impl-1.3.2.jar
 metabolights-webapps/src/main/webapp/WEB-INF/lib/search-service-4.0.jar
 metabolights-webapps/src/main/webapp/WEB-INF/lib/sjsxp-1.0.1.jar
