--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,8 @@ mzml_validation_progress_log.txt
 *.mp4
 metabolights-webservice-dev.war
 metabolights-webapp-dev.war
+metabolights.sh
+study_titles.sh
+test_investigation_files.sh
+update_study_meta_stats.sh
+validate_studies.sh
