--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -633,5 +633,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- Monitoring -->
+        <dependency>
+            <groupId>net.bull.javamelody</groupId>
+            <artifactId>javamelody-core</artifactId>
+            <version>1.69.0</version>
+        </dependency>
     </dependencies>
 </project>
