--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,19 @@
 		<filter-class>uk.ac.ebi.metabolights.es.HealthFilter</filter-class>
 	</filter>
 
+    <filter>
+        <filter-name>javamelody</filter-name>
+        <filter-class>net.bull.javamelody.MonitoringFilter</filter-class>
+        <async-supported>true</async-supported>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>javamelody</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>ASYNC</dispatcher>
+    </filter-mapping>
+
 	<filter-mapping>
 		<filter-name>HealthFilter</filter-name>
 		<url-pattern>/jmxproxy/*</url-pattern>
@@ -63,6 +76,10 @@
     -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>net.bull.javamelody.SessionListener</listener-class>
     </listener>
 
     <!--
