--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -342,6 +342,13 @@
             <artifactId>chebiWS-client</artifactId>
             <version>2.3.2</version>
         </dependency>
+
+        <!-- Monitoring -->
+        <dependency>
+            <groupId>net.bull.javamelody</groupId>
+            <artifactId>javamelody-core</artifactId>
+            <version>1.69.0</version>
+        </dependency>
     </dependencies>
 
     <build>
