Fixed invalid repositories Java 1.7 compiler is common for all modules Jar-file-build-with-dependecy plugins are disabled to enhace build time Maven Java compiler versions are same Spring sub version is upgraded to the lastest one 3.2.5 -> 3.2.18 Spring security version 3.2.5 -> 3.2.10

--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -127,6 +127,9 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
         </repository>
         <repository>
             <id>sonatype-snapshots</id>
@@ -134,6 +137,9 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
         </repository>
         <repository>
             <id>codehaus-mule-repo</id>
