--- a/metabolights-referencelayer/pom.xml
+++ b/metabolights-referencelayer/pom.xml
@@ -35,12 +35,9 @@
         <version>1.5</version>
     </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <modules>
-        <module>domain</module>
+        <!--<module>domain</module>-->
         <module>dao</module>
         <module>WoRMS-client</module>
         <module>importer</module>
@@ -52,12 +49,14 @@
 	            <plugin>
 	            	<groupId>org.apache.maven.plugins</groupId>
 	                <artifactId>maven-compiler-plugin</artifactId>
-	                <version>2.3.2</version>
+	                <version>3.2</version>
 	                <configuration>
-	                    <source>1.6</source>
-	                    <target>1.6</target>
+	                    <source>1.7</source>
+	                    <target>1.7</target>
+						<encoding>UTF-8</encoding>
 	                </configuration>
 	            </plugin>
+				<!--
 	            <plugin>
 	                <groupId>org.apache.maven.plugins</groupId>
 	                <artifactId>maven-surefire-plugin</artifactId>
@@ -81,6 +80,7 @@
 	                    </execution>
 	                </executions>
 	            </plugin>
+	            -->
 	        </plugins>
     	</pluginManagement>
     </build>
