--- a/metabolights-webapps/src/main/webapp/editor/assets/configs/development.config.json
+++ b/metabolights-webapps/src/main/webapp/editor/assets/configs/development.config.json
@@ -30,11 +30,11 @@
     "videoURL": {
       "all": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_ALL.mp4",
       "aspera": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_Aspera.mp4",
-      "create_account": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-acc.mp4",
-      "create_study": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-study.mp4",
+      "createAccount": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-acc.mp4",
+      "createStudy": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-study.mp4",
       "maf": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_MAF.mp4",
       "factors": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_factors.mp4",
-      "create_assay": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_new-assay.mp4",
+      "createAssay": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_new-assay.mp4",
       "protocols": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_protocols.mp4",
       "samples": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_samples.mp4",
       "descriptors": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_study-description.mp4",
