--- a/metabolights-webapps/src/main/webapp/editor/assets/configs/production.config.json
+++ b/metabolights-webapps/src/main/webapp/editor/assets/configs/production.config.json
@@ -3,15 +3,15 @@
     "production": "true",
     "isTesting": "false",
     "sessionLength": "600000",
-    "origin": "https://www.ebi.ac.uk",
-    "endpoint": "https://www.ebi.ac.uk/metabolights",
+    "origin": "http://localhost:8080",
+    "endpoint": "http://localhost:8080/metabolights",
     "loginURL": "login",
     "clearJavaSession" : true,
-    "javaLogoutURL": "https://www.ebi.ac.uk/metabolights/j_spring_security_logout",
+    "javaLogoutURL": "http://localhost:8080/metabolights/j_spring_security_logout",
     "redirectURL": "console",
     "metabolightsWSURL": {
-        "domain": "https://www.ebi.ac.uk/metabolights/",
-        "baseURL": "https://www.ebi.ac.uk/metabolights/ws",
+        "domain": "http://localhost:8080/metabolights/",
+        "baseURL": "http://wp-np3-19:5001/metabolights/ws",
         "guides": "https://raw.githubusercontent.com/EBI-Metabolights/guides/master/",
         "ontologyDetails": "https://www.ebi.ac.uk/ols/api/ontologies/"
 
@@ -31,11 +31,11 @@
   "videoURL": {
     "all": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_ALL.mp4",
     "aspera": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_Aspera.mp4",
-    "create_account": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-acc.mp4",
-    "create_study": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-study.mp4",
+    "createAccount": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-acc.mp4",
+    "createStudy": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_create-study.mp4",
     "maf": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_MAF.mp4",
     "factors": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_factors.mp4",
-    "create_assay": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_new-assay.mp4",
+    "createAssay": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_new-assay.mp4",
     "protocols": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_protocols.mp4",
     "samples": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_samples.mp4",
     "descriptors": "https://www.ebi.ac.uk/metabolights/contents/assets/videos/201904_ML_study-description.mp4",
