--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     </modules>
     <properties>
         <com.fasterxml.jackson.version>2.8.9</com.fasterxml.jackson.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
         <extensions>
