--- a/metabolights-webapps/src/test/resources/webapptest.properties
+++ b/metabolights-webapps/src/test/resources/webapptest.properties
@@ -19,7 +19,7 @@ contactUrl = contact
 accountUrl = account
 
 # Logout
-logout = j_spring_security_logout
+logout = logout
 logoutTextLabel = log out
 loggedOutSuccess = You have successfully logged out
 
