--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "java",
-            "name": "Debug (Attach)",
+            "name": "Debug webapp (Attach)",
             "request": "attach",
+            "projectName": "metabolights-webapp",
+            "hostName": "localhost",
+            "port": 8000
+        },
+        {
+            "type": "java",
+            "name": "Debug webservice (Attach)",
+            "request": "attach",
+            "projectName": "metabolights-webservice",
             "hostName": "localhost",
             "port": 8000
         },
