--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -72,6 +72,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>net.sf.jnati</groupId>
+            <artifactId>jnati-deploy</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <dependency>
             <groupId>net.sf.jni-inchi</groupId>
             <artifactId>jni-inchi</artifactId>
             <version>0.7</version>
@@ -80,6 +85,10 @@
                     <artifactId>log4j</artifactId>
                     <groupId>log4j</groupId>
                 </exclusion>
+                <exclusion>
+                    <groupId>net.sf.jnati</groupId>
+                    <artifactId>jnati-deploy</artifactId>
+                </exclusion>                
             </exclusions>
         </dependency>
         <dependency>
@@ -94,11 +103,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+	                <version>2.3.2</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -146,7 +155,7 @@
         <repository>
             <id>jni-inchi</id>
             <name>JNI-InChI Maven Repository</name>
-            <url>http://jni-inchi.sourceforge.net/m2repo</url>
+            <url>https://jni-inchi.sourceforge.net/m2repo/</url>
         </repository>
     </repositories>
 </project>
