--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -40,8 +40,8 @@
 
     <modules>
         <module>metabolights-isatab-utils</module>
-        <module>metabolights-mztab</module>
-        <module>metabolights-sampledb</module>
+        <!-- <module>metabolights-mztab</module> -->
+        <!-- <module>metabolights-sampledb</module> -->
         <module>metabolights-export</module>
     </modules>
 
