--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -40,8 +40,8 @@
         <org.spring.security.version>3.2.5.RELEASE</org.spring.security.version>
 
         <!-- Maximum version compatible with spring 3.x: http://www.mkyong.com/hibernate/java-lang-classnotfoundexception-org-hibernate-service-jta-platform-spi-jtaplatform/-->
-        <!--<org.hibernate.version>4.3.8.Final</org.hibernate.version>-->
-        <org.hibernate.version>4.2.11.Final</org.hibernate.version>
+        <org.hibernate.version>4.3.8.Final</org.hibernate.version>
+        <!-- <org.hibernate.version>4.2.11.Final</org.hibernate.version> -->
 
     </properties>
 
@@ -77,10 +77,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+	                <version>2.3.2</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -487,6 +487,11 @@
             <type>jar</type>
             <scope>test</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.5</version>
         </dependency>
         <!--dependency>
             <groupId>uk.ac.ebi.pride.web</groupId>
